[workspace]
members = [
    "crates/*",
    "deps/*"
]

[profile.dev]
debug = true
opt-level = 1
incremental = false
debug-assertions = true

[profile.release]
opt-level = 3
lto = 'fat'
incremental = false
debug-assertions = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
lto = 'fat'
debug-assertions = false
incremental = false
codegen-units = 1
