[package]
name = "sll-compiler"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.inkwell]
path = "../../deps/inkwell"
default_features = false
features = ["target-x86", "llvm10-0"]