[package]
name = "sll-parser"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
thiserror = "1.0.17"
bumpalo = { version = "3.3.0", features = ["collections"] }
